# task-runner-x

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  MIGRATION_TESTS.py  Makefile  README.md  RISK_REGISTER.md  alembic.ini  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
SECURITY/: DEPENDENCIES.md
alembic/: env.py
alembic/versions/: 20241102_01_add_task_attempts_last_error.py  20241108_01_idempotent_tasks.py
scripts/: dev-down.sh  dev-up.sh  init-alembic.sh  reset-db.sh  seed-demo.sh  win-dev-down.ps1  win-dev-up.ps1
taskrunnerx/: config.py  logging.py  metrics.py
taskrunnerx/adapters/: idempotency.py  redis_streams.py
taskrunnerx/api/: main.py
taskrunnerx/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
taskrunnerx/app/api/routes/: __init__.py
taskrunnerx/app/services/: queue.py  tasks.py
taskrunnerx/domain/: entities.py  errors.py  models.py
taskrunnerx/scheduler/: scheduler.py
taskrunnerx/scripts/: init_db.py
taskrunnerx/services/: cron_parser.py  executor.py  job_service.py  schedule_service.py  worker_service.py
taskrunnerx/storage/: db.py  models.py  repo_jobs.py  repo_schedules.py
taskrunnerx/storage/migrations/: env.py
taskrunnerx/tasks/: __init__.py  builtin.py
taskrunnerx/worker/: __init__.py  config.py  logging.py  metrics.py  worker.py
tests/: conftest.py  test_integration_retry.py  test_tasks.py  test_worker_purity.py
